# otto-runner

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile-common.inc  README.md  ces.dts  dt-dualcam.dts  fastcamd-init  hw-test.c  install.sh  main  main.c  otto-demo-init  particles.c  python-init  watch_source.sh  wifi-init  wifi.sh
docs/: spec-api.md
fastcmd/: loop.sh  start_camd.sh
graphics/canvas/: canvas.c  canvas.h
graphics/fbdev/: fbdev.c  fbdev.h
graphics/seps114a/: seps114a.c  seps114a.h
io/bq27510/: bq27510.c  bq27510.h
lib/: gif-h.h  libshapes.c
lib/camera/: rpi_camera.c  rpi_camera.h
lib/graphics/canvas/: canvas.c  canvas.h
lib/graphics/seps114a/: seps114a.c  seps114a.h
lib/iopp/: bcm2835.hpp  iotypes.hpp
lib/libshapes/: libshapes.c  shapes.h
lib/stak/: stak.hpp  types.hpp
lib/stak/devices/: camera.hpp  disk.cpp  disk.hpp  power.cpp  power.hpp  wifi.cpp  wifi.hpp
lib/stak/io/: buzzer.cpp  buzzer.hpp  pwm.cpp  pwm.hpp
python/: server.py
python/views/: images.tpl
src/: Makefile  Makefile-common.inc  main.c  main.cpp  stak.h  stak.hpp
src/apis/composer/: composer.c  composer.h
src/apis/input/: input.c  input.h
src/application/: application.c  application.cpp  application.h
src/application/plugin/: plugin.h
src/application/rpc/: rpc.c  rpc.h
src/application/state/: state.c  state.h
src/core/: core.c  core.h
src/core/timer/: timer.h
src/daemons/composer/: composerd.c
src/daemons/input/: input.c  input.h  inputd.c
src/modes/camera/: camera.c
src/modes/ces/: ces.c  ces_utils.c  ces_utils.h
src/modes/ipc/: ipc.c
src/modes/particles/: particles.c
src/modes/test/: test.c  test.cpp
src/modes/test-svg/: test-svg.cpp
src/plugins/ces/: ces.c
src/plugins/ipc/: ipc.c
src/plugins/particles/: particles.c
src/plugins/test/: test.c
